# zclaw.TW

./: CHANGELOG.md  CLAUDE.md  README.md  VERSION
.github/workflows/: build-nvs-tool.yml  firmware-size-guard.yml  firmware-stack-guard.yml  firmware-target-matrix.yml  host-tests.yml
docs/: CODEBASE_MAP.md  firmware-size-and-flash.md  memory-injection.md  nvs-tool.md  openrouter-model-selection.md  reasoning-models.md  system-prompt-config.md  telegram-voice-asr.md  upstream-sync.md  zclaw.TW.md  zclaw.TW_SPEC.md
docs-site/: build-your-own-tool.html  changelog.html  tools.html
docs-site/reference/: README_COMPLETE.md
main/: CMakeLists.txt  agent.c  builtin_tools.def  config.h  cron.c  json_util.c  memory.c  nvs_keys.h  telegram.c  telegram_voice.c  telegram_voice.h  tools_alias.c  tools_cron.c  tools_handlers.h  tools_prompt.c
scripts/: build-nvs-tool.sh  provision-dev.sh  provision.sh  requirements-nvs-tool.txt  serial-log.sh  test.sh  zclaw-nvs-tool.py
test/api/: provider_harness.py
test/host/: esp_crt_bundle.h  esp_heap_caps.h  esp_http_client.h  mock_esp.c  mock_esp.h  nvs_flash.h  test_agent.c  test_api_provider_harness.py  test_json_util_integration.c  test_runner.c  test_telegram_voice.c
